# databases-and-data-analysis

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
intro-to-data-mining/: main.py
intro-to-data-mining/api-and-web-scraping/: quotes_api.py  readme.md  weather_api.py
intro-to-data-mining/api-and-web-scraping/output/: quotes.json
intro-to-data-mining/classification-and-machine-learning/: readme.md
intro-to-data-mining/data-cleaning/: readme.md
intro-to-data-mining/language-processing/: readme.md
intro-to-data-mining/load-and-export-data/: create_table.sql  create_users.sql  export_from_db_to_csv.py  populate_db_from_csv.py  readme.md  xlsx_load.py
intro-to-data-mining/load-and-export-data/output/: xlsx_to_json.json
intro-to-data-mining/resources/: helper_methods.py
intro-to-data-mining/resources/data/: quotes_api_failure.json  quotes_api_success2.json
intro-to-data-mining/statistics-and-visualizations/: readme.md
resources/: helper_methods.py  test_helper_methods.py
resources/data/: employees.csv
resources/methods/: file_methods.py  misc_methods.py
spreadsheet-analysis/: Computer Comparison - Dalton.xlsx  Computer Comparison - Maggie, Barb.xlsx  README.md  benchmark_scrape.py  computer comparisons.xlsx  mortgage comparisons.xlsx
sql-database/: README.md  create_tables.sql  flowers.csv  queries.sql  setup_challenges.md
tests/intro-to-data-mining_test/: main_test.py
tests/resources_tests/methods_tests/: file_methods_test.py  misc_methods_test.py
